--- a/CSS/Section3.css
+++ b/CSS/Section3.css
@@ -34,6 +34,7 @@
     justify-content: center;
     align-items: center;
     width: 90%;
+    object-fit: cover;
 
     @media(min-width: 769px) {
         align-items: normal;
